--- a/style.css
+++ b/style.css
@@ -1,29 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300&display=swap');
-
-*{ padding: 0; margin: 0; text-align: center; font-family: Roboto; }
-
-.vs{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    position: fixed;
-    width: 200px;
-    top: 0;
-    color: white;
-    background: cornflowerblue;
-}
-.vs.left{
-    left: 0;
+h1{
+    color: blue;
+    background: pink
 }
 
-.vs.right{
-    background: green;
-    right: 0;
-}
-
-hr{
-    height: 0;
-    border: none;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-bottom: black 2px solid;
+h2{
+    background: blue;
+    color: pink
 }
