--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import 'https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha2/katex.min.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700|Material+Icons&display=swap');
 
 *{
 	color: #242a30;
@@ -90,6 +90,36 @@ header #title{
 	color: #242a30;
 	text-align: center;
 	transition: inherit;
+}
+
+header #title::after{
+	content: 'menu';
+	margin-left: 10px;
+	color: #242a30;
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	position: relative;
+	top: 5px;
+	font-size: 30px;
+	display: inline-block;
+	line-height: 1;
+	text-transform: none;
+	letter-spacing: normal;
+	word-wrap: normal;
+	white-space: nowrap;
+	direction: ltr;
+
+	/* Support for all WebKit browsers. */
+	-webkit-font-smoothing: antialiased;
+	/* Support for Safari and Chrome. */
+	text-rendering: optimizeLegibility;
+
+	/* Support for Firefox. */
+	-moz-osx-font-smoothing: grayscale;
+
+	/* Support for IE. */
+	font-feature-settings: 'liga';
 }
 
 pre code, pre code *{
